[build-system]
requires = ["hatchling >= 1.26"]
build-backend = "hatchling.build"

[project]
name = "expense-tracker"
version = "0.0.1"
description = "CLI for managing expenses"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
authors = [
  { name="av-guy", email="28807350+av-guy@users.noreply.github.com" },
]
dependencies = [
  "typer==0.19.2",
  "SQLAlchemy==2.0.43",
  "kink==0.8.1",
  "pandas"
]
classifiers = [
  "Programming Language :: Python :: 3",
  "Operating System :: OS Independent",
]

[project.scripts]
expense-tracker = "expense_tracker.__main__:app"

[project.optional-dependencies]
dev = [
  "pytest==8.4.2",
  "build==1.3.0",
  "pytest-cov"
]

[tool.coverage.run]
omit = [
    "*/__main__.py",
    "*/tests/*"
]
